# ClusterShell

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  STYLEGUIDE.md  TESTING.md  install.sh  mise.toml  pyproject.toml
.github/workflows/: ci.yml
architecture/: README.md  build-containers.md  gateway-deploy-connect.md  gateway-security.md  gateway-settings.md  gateway-single-node.md  gateway.md  inference-routing.md  kubernetes-operator.md  policy-advisor.md  sandbox-connect.md  sandbox-custom-containers.md  sandbox-providers.md  sandbox.md  security-policy.md  system-architecture.md  tui.md
console/: Dockerfile  README.md
console/backend/: go.mod  go.sum
console/deploy/: deployment.yaml
console/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/clustershell-bootstrap/: Cargo.toml
crates/clustershell-cli/: Cargo.toml
crates/clustershell-core/: Cargo.toml  build.rs
crates/clustershell-ocsf/: Cargo.toml
crates/clustershell-operator/: Cargo.toml
crates/clustershell-operator/src/: controller.rs  crd.rs  main.rs
crates/clustershell-policy/: Cargo.toml
crates/clustershell-policy/src/: lib.rs
crates/clustershell-providers/: Cargo.toml
crates/clustershell-providers/src/: lib.rs
crates/clustershell-router/: Cargo.toml  README.md
crates/clustershell-sandbox/: Cargo.toml
crates/clustershell-server/: Cargo.toml
crates/clustershell-tui/: Cargo.toml
crates/clustershell-tui/src/: app.rs  event.rs  lib.rs
crates/clustershell-tui/src/ui/: mod.rs  sandbox_draft.rs  splash.rs
deploy/ai-agent-template/: README.md
deploy/docker/: Dockerfile.cli-macos  Dockerfile.images  Dockerfile.python-wheels  Dockerfile.python-wheels-macos  cluster-entrypoint.sh  cluster-healthcheck.sh
deploy/github-copilot/: AUTH.md  README.md  deployment-openshift.yaml  deployment.yaml  kustomization.yaml
deploy/opencode/: README.md  deployment-openshift.yaml  deployment.yaml  kustomization.yaml
docs/: CONTRIBUTING.md  conf.py  index.md
docs/about/: architecture.md  overview.md  release-notes.md  supported-agents.md
docs/get-started/: quickstart.md
docs/inference/: configure.md  index.md
docs/reference/: default-policy.md  gateway-auth.md  policy-schema.md  support-matrix.md
docs/research/: console-ui-design.md  openshift-console-architecture.md
docs/resources/: license.md
docs/sandboxes/: community-sandboxes.md  index.md  manage-gateways.md  manage-providers.md  manage-sandboxes.md  policies.md
docs/tutorials/: first-network-policy.md  github-sandbox.md  index.md  inference-ollama.md  local-inference-lmstudio.md
e2e/install/: bash_test.sh  fish_test.fish  helpers.sh  sh_test.sh  zsh_test.sh
e2e/python/: conftest.py  test_inference_routing.py  test_policy_validation.py  test_sandbox_api.py  test_sandbox_exec_python.py  test_sandbox_gpu.py  test_sandbox_policy.py  test_sandbox_providers.py  test_sandbox_venv.py  test_security_tls.py
e2e/rust/: Cargo.toml
examples/: autoresearch-integration.md  gateway-deploy-connect.md  openclaw.md  sync-files.md  vscode-remote-sandbox.md
examples/bring-your-own-container/: Dockerfile  README.md  app.py
examples/local-inference/: README.md  inference.py  routes.yaml
examples/policy-advisor/: README.md  ctf.py
examples/private-ip-routing/: README.md
examples/sandbox-policy-quickstart/: README.md  demo.sh  policy.yaml
experiments/: program.md  results.tsv
proto/: clustershell.proto  datamodel.proto  inference.proto  sandbox.proto  test.proto
scripts/: docker-cleanup.sh  generate_third_party_notices.py  remote-deploy.sh  update_license_headers.py
tasks/: cluster.toml  helm.toml  publish.toml  python.toml  sbom.toml  term.toml  test.toml
(+185 files in other folders)
