# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "clustershell-policy"
description = "Shared sandbox policy parsing and defaults for ClusterShell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clustershell-core = { path = "../clustershell-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
miette = { workspace = true }

[lints]
workspace = true
